--- a/docs/solana/migration/hst.mdx
+++ b/docs/solana/migration/hst.mdx
@@ -5,7 +5,7 @@ pagination_label: HST on Solana
 sidebar_label: HST on Solana
 description: Helium Security Tokens on Solana, how to stake, unstake, and receive HNT.
 image: https://docs.helium.com/img/link-image.png
-slug: /solana/hst
+slug: /solana/migration/hst
 ---
 
 HST on Solana is implemented via a programmatic Fanout Wallet.
