--- a/docs/solana/migration/hotspot-operator.mdx
+++ b/docs/solana/migration/hotspot-operator.mdx
@@ -82,8 +82,6 @@ is a record of the final state of the Helium L1 blockchain.
 The migration-service program will use this Snapshot to map existing rewards and Network state to
 the Solana blockchain.
 
-<!-- TODO: add link to migration-service program -->
-
 :::
 
 The premine allocates IOT tokens in the following proportion:
@@ -95,17 +93,17 @@ The premine allocates IOT tokens in the following proportion:
 ### What is an "Active" Hotspot?
 
 The migration service will consider a Hotspot as "Active" if the Snapshot includes any of the
-following below. Note that Data Only Hotspots will not be rewarded:
+following:
 
-- Participated in PoC activity (Witnessing & Challenges), including:
 - Witnessed and was a valid witness
 - Beaconed and had valid witnesses
+- Transferred LoRaWAN data and been rewarded for it
 
 A Hotspot is not "Active" if it:
 
 - Has not beaconed with valid witnesses
 - Has not been a valid witness to a beacon
-- Transferred LoRaWAN data and been rewarded for it (this includes Data Only Hotspots)
+- Has not passed data and been rewarded for it
 
 :::caution Hotspots on the Denylist
 
@@ -115,6 +113,15 @@ meeting any other critera.
 :::
 
 ### Data Only Hotspot Eligibility
+
+:::warning Migration Errors
+
+A bug in the migration snapshot resulted in Data Only Hotspots not being considered nor rewarded as
+part of the IOT Premine.
+
+Hotspots rewarded for `poc_witness` or `poc_challengee` activity were included in the Premine.
+
+:::
 
 The migration-service program will allocate rewards to any Data Only Hotspot which has transferred
 data within the 30 days preceding the Snapshot.
