--- a/docs/solana/migration/hst.mdx
+++ b/docs/solana/migration/hst.mdx
@@ -1,8 +1,8 @@
 ---
 id: hst
 title: Helium Security Tokens on Solana
-pagination_label: HST on Solana
-sidebar_label: HST on Solana
+pagination_label: HST Holder
+sidebar_label: HST Holder
 description: Helium Security Tokens on Solana, how to stake, unstake, and receive HNT.
 image: https://docs.helium.com/img/link-image.png
 slug: /solana/migration/hst
