--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -111,12 +111,12 @@ receive veHNT in proportion with the amount of time that the tokens are staked f
 Tokens are locked for a fixed duration and are released in full at the end of the defined lockup
 period. Vote weight declines linearly until release.
 
-:::note Example
 
-You lock 10.000 tokens for two years. They are then unavailable for the next two years. After this
-time, you can withdraw them again.
-
-:::
+<figure className="screensnippet-wrapper">
+  <img src={useBaseUrl('/img/realms/cliffgraph.png')} style={{ maxHeight: 'initial', padding: '0 0 8px 0' }}  />
+  <figcaption>You lock 10.000 tokens with a lockup duration of one year. They are then unavailable for the next one year. After this
+time, you can withdraw them again.</figcaption>
+</figure>
 
 #### Constant
 
@@ -124,12 +124,12 @@ Tokens are locked indefinitely. At any time you can start the unlock process whi
 initially chosen lockup duration. Vote weight stays constant until you start the unlock process,
 then it declines linearly until release.
 
-:::note Example
 
-You lock 10.000 tokens with a lockup duration of one year. After two years you decide to start the
-unlocking process. Another year after that, you can withdraw the tokens.
-
-:::
+<figure className="screensnippet-wrapper">
+  <img src={useBaseUrl('/img/realms/constantgraph.png')} style={{ maxHeight: 'initial', padding: '0 0 8px 0' }}  />
+  <figcaption>You lock 10.000 tokens with a lockup duration of one year. After three years you decide to start the
+unlocking process. Another year after that, you can withdraw the tokens.</figcaption>
+</figure>
 
 ### Duration
 
