--- a/docs/helium-tokens/sol.mdx
+++ b/docs/helium-tokens/sol.mdx
@@ -1,7 +1,11 @@
-id: sol-token title: The Solana Token pagination_label: SOL Token sidebar_label: SOL Token
-description: Solana Token Documentation image: https://docs.helium.com/img/link-image.png slug:
-/helium-tokens/hnt
-
+---
+id: sol-token
+title: Helium Sol Network Token
+pagination_label: SOL Token
+sidebar_label: SOL Token
+description: Solana SOL Token Documentation
+image: https://docs.helium.com/img/link-image.png
+slug: /helium-tokens/sol
 ---
 
 The Helium Network now utilizes the Solana blockchain, which is extremely fast, scalable, and
