frontmatter, sidebar, and quick styling

--- a/docs/helium-tokens/sol.mdx
+++ b/docs/helium-tokens/sol.mdx
@@ -1,8 +1,13 @@
-id: sol-token title: The Solana Token pagination_label: SOL Token sidebar_label: SOL Token
-description: Solana Token Documentation image: https://docs.helium.com/img/link-image.png slug:
-/helium-tokens/hnt
-
 ---
+id: sol-token
+title: The Solana Token
+pagination_label: SOL Token
+sidebar_label: SOL Token
+description: Solana Token Documentation
+image: https://docs.helium.com/img/link-image.png
+slug: /helium-tokens/sol-token
+---
+
 
 The Helium Network now utilizes the Solana blockchain, which is extremely fast, scalable, and
 low-cost. Solana has a separate token, which is called SOL.
@@ -29,7 +34,10 @@ HNT for 0.2 SOL.
 
 import { HntToFeeSol } from "@theme/HntToFeeSol"
 
-<HntToFeeSol />
+<figure className="screensnippet-wrapper"  style={{ padding: '16px' }} >
+   <HntToFeeSol />
+</figure>
+<br />
 
 For example, locking up HNT to gain veHNT creates new accounts and requires about ~0.006 SOL. The
 Helium Foundation has provided every single Helium wallet with 0.00139 SOL (enough for 100 standard
