Small edits to copy

--- a/docs/helium-tokens/sol.mdx
+++ b/docs/helium-tokens/sol.mdx
@@ -17,7 +17,7 @@ low-cost. Solana has a separate token, which is called SOL.
    your Hotspots, and all on-chain Helium transactions. Solana’s average transaction fee is 0.000014
    SOL. This is massively cheaper than the Helium L1 blockchain’s fee of $0.35 worth of DC.
 2. Solana stores information, including info about your token balances, NFTs, and anything else, on
-   accounts. Storing this information takes up valuable space, so Solana charges a fee called “rent”
+   chain as special "accounts". Storing this information takes up valuable space, so Solana charges a fee called “rent”
    on these accounts. Each account has a rent fee, so the more accounts you have, the more rent is
    required. There is typically one account for each token type that you have or want. Closing
    accounts can return rent to your wallet. Rent for one account is ~0.002 SOL, so it’s also pretty
@@ -29,7 +29,7 @@ If you don’t have enough SOL in your wallet, you will not be able to make tran
 accounts to hold tokens. Performing more complex transactions where accounts need to be created
 may require more SOL in rent than you have. This includes reasserting your Hotspot’s location,
 locking HNT to gain veHNT, and potentially more complex DeFi actions where multiple accounts need to
-be created (even if only temporarily). If you do not have enough sol, you can use this tool to swap
+be created (even if only temporarily). If you do not have enough SOL, you can use this tool to swap
 HNT for 0.2 SOL. 
 
 import { HntToFeeSol } from "@theme/HntToFeeSol"
