--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -28,7 +28,7 @@ With the deprecation of the Helium L1, changes to [API](https://docs.helium.com/
 2. Existing API codebase: will no longer serve new data.
 3. api.helium.io (built on top of existing etl and api): will stay serving old data.
 4. explorer.helium.com (built on top of api.helium.io and other apis): will have data from the old
-   chain and be migrated to old-explorer.helium.com.
+   chain and be migrated to explorer-old.helium.com.
 
 What is new includes:
 
