--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -26,6 +26,8 @@ transmit range to downlink frequencies and special configuration may be necessar
 
 ## Frequency Plans
 
+Each frequency/channel supports multiple spreading factors. Lower spreading factors correspond to higher data rates, but shorter transmission ranges and less receiver sensitivity. 
+
 ### US915
 
 Also known as **US902-928**
