--- a/docs/hotspot-makers/compliance-commitee.mdx
+++ b/docs/hotspot-makers/compliance-commitee.mdx
@@ -122,9 +122,9 @@ that members cycle yearly.
     notes are taken, both are publicly available to the community.
     - Meeting are scheduled for 12pm ET on the 3rd Wednesday of each month. (This is subject to
       change due to holidays, emergencies, etc)
-      - **Tentative 2022 Schedule:** _January 19, February 16, March 16, April 20, May 18, June 15,
-        July 20, August 17, September 21, October 19, November 16, & December 21_
-    - [Recorded videos](https://vimeo.com/showcase/9127637)
+      - **Tentative 2023 Schedule:** _May 17, June 21,
+        July 19, August 16, September 20, October 18, November 15, & December 20_
+    - [Recorded videos](https://www.youtube.com/@heliumfoundation)
     - [MCC Monthly Call Notes](https://docs.google.com/document/d/1CtJK8Podx8hdWNJ8HCRImBfSwJVt1jZ10Eabeh2s-yA/edit?usp=sharing)
     - Announcements will be published on the
       [Committee Announcements channel](https://discord.com/channels/404106811252408320/921085505028890674)
@@ -154,4 +154,4 @@ Target committee size and composition are outlined in the following table.
 
 ---
 
-[Helium Network Manufacturer Ethics and Expectations](/hotspot-makers/maker-ethics)
+[Helium Network Manufacturer Ethics and Expectations]([/hotspot-makers/maker-ethics](https://docs.helium.com/hotspot-makers/maker-ethics/))
