--- a/docs/helium-tokens/sol.mdx
+++ b/docs/helium-tokens/sol.mdx
@@ -32,6 +32,9 @@ locking HNT to gain veHNT, and potentially more complex DeFi actions where multi
 be created (even if only temporarily). If you do not have enough SOL, you can use this tool to swap
 HNT for 0.02 SOL. 
 
+Open this page from within the browser of the Helium Wallet App (Click on Globe icon) to add the SOL to 
+your  wallet app. 
+
 import { HntToFeeSol } from "@theme/HntToFeeSol"
 
 <figure className="screensnippet-wrapper"  style={{ padding: '16px' }} >
