update SOL fee required for lockup

--- a/docs/helium-tokens/sol.mdx
+++ b/docs/helium-tokens/sol.mdx
@@ -42,8 +42,7 @@ import { HntToFeeSol } from "@theme/HntToFeeSol"
 </figure>
 <br />
 
-For example, locking up HNT to gain veHNT creates new accounts and requires about ~0.006 SOL. The
+For example, locking up HNT to gain veHNT creates new accounts and requires around 0.014 SOL. The
 Helium Foundation has provided every single Helium wallet with 0.00139 SOL (enough for 100 standard
-transfers). You will need to acquire at least 0.005 more SOL to enable HNT lockup. This is about
-$0.13 in SOL. We recommend having more than that in case you need to fund additional accounts in the
+transfers). You may need to acquire more SOL to enable HNT lockup. We recommend having more than the minimum amount of SOL in case you need to fund additional accounts in the
 future.
