applied line wrap

--- a/docs/oracles/price-oracles.mdx
+++ b/docs/oracles/price-oracles.mdx
@@ -11,8 +11,8 @@ slug: /oracles/price-oracles
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 The [Price Oracle](/blockchain/oracles) is one of many Oracles on the Helium Network. The Price
-Oracle is required on-chain as the price of HNT is needed to calculate HNT to burn when minting
-Data Credits (DC).
+Oracle is required on-chain as the price of HNT is needed to calculate HNT to burn when minting Data
+Credits (DC).
 
 ## Post Migration Implementation
 
