--- a/docs/helium-tokens/sol.mdx
+++ b/docs/helium-tokens/sol.mdx
@@ -8,7 +8,6 @@ image: https://docs.helium.com/img/link-image.png
 slug: /helium-tokens/sol-token
 ---
 
-
 The Helium Network now utilizes the Solana blockchain, which is extremely fast, scalable, and
 low-cost. Solana has a separate token, which is called SOL.
 
@@ -17,33 +16,32 @@ low-cost. Solana has a separate token, which is called SOL.
    your Hotspots, and all on-chain Helium transactions. Solana’s average transaction fee is 0.000014
    SOL. This is massively cheaper than the Helium L1 blockchain’s fee of $0.35 worth of DC.
 2. Solana stores information, including info about your token balances, NFTs, and anything else, on
-   chain as special "accounts". Storing this information takes up valuable space, so Solana charges a fee called “rent”
-   on these accounts. Each account has a rent fee, so the more accounts you have, the more rent is
-   required. There is typically one account for each token type that you have or want. Closing
-   accounts can return rent to your wallet. Rent for one account is ~0.002 SOL, so it’s also pretty
-   cheap, but more expensive than the transaction fee. In most cases, you get this fee back once you
-   close the corresponding account. (Note: this fee may vary and is more complicated, but has a
-   current max of ~0.002 SOL.)
+   chain as special "accounts". Storing this information takes up valuable space, so Solana charges
+   a fee called “rent” on these accounts. Each account has a rent fee, so the more accounts you
+   have, the more rent is required. There is typically one account for each token type that you have
+   or want. Closing accounts can return rent to your wallet. Rent for one account is ~0.002 SOL, so
+   it’s also pretty cheap, but more expensive than the transaction fee. In most cases, you get this
+   fee back once you close the corresponding account. (Note: this fee may vary and is more
+   complicated, but has a current max of ~0.002 SOL.)
 
 If you don’t have enough SOL in your wallet, you will not be able to make transactions or make new
-accounts to hold tokens. Performing more complex transactions where accounts need to be created
-may require more SOL in rent than you have. This includes reasserting your Hotspot’s location,
-locking HNT to gain veHNT, and potentially more complex DeFi actions where multiple accounts need to
-be created (even if only temporarily). If you do not have enough SOL, you can use this tool to swap
-HNT for 0.02 SOL. 
+accounts to hold tokens. Performing more complex transactions where accounts need to be created may
+require more SOL in rent than you have. This includes reasserting your Hotspot’s location, locking
+HNT to gain veHNT, and potentially more complex DeFi actions where multiple accounts need to be
+created (even if only temporarily). If you do not have enough SOL, you can use this tool to swap HNT
+for 0.02 SOL.
 
-Open this page from within the browser of the Helium Wallet App (Click on Globe icon) to add the SOL to 
-your  wallet app. 
+Open this page from within the browser of the Helium Wallet App (Click on Globe icon) to add the SOL
+to your wallet app.
 
-import { HntToFeeSol } from "@theme/HntToFeeSol"
+import { HntToFeeSol } from '@theme/HntToFeeSol'
 
-<figure className="screensnippet-wrapper"  style={{ padding: '16px' }} >
-   <HntToFeeSol />
+<figure className="screensnippet-wrapper" style={{ padding: '16px' }}>
+  <HntToFeeSol />
 </figure>
 <br />
 
-For example, locking up HNT to gain veHNT creates new accounts and requires about ~0.006 SOL. The
+For example, locking up HNT to gain veHNT creates new accounts and requires around 0.014 SOL. The
 Helium Foundation has provided every single Helium wallet with 0.00139 SOL (enough for 100 standard
-transfers). You will need to acquire at least 0.005 more SOL to enable HNT lockup. This is about
-$0.13 in SOL. We recommend having more than that in case you need to fund additional accounts in the
-future.
+transfers). You may need to acquire more SOL to enable HNT lockup. We recommend having more than the
+minimum amount of SOL in case you need to fund additional accounts in the future.
