--- a/docs/hotspot-makers/compliance-commitee.mdx
+++ b/docs/hotspot-makers/compliance-commitee.mdx
@@ -154,4 +154,4 @@ Target committee size and composition are outlined in the following table.
 
 ---
 
-[Helium Network Manufacturer Ethics and Expectations]([/hotspot-makers/maker-ethics](https://docs.helium.com/hotspot-makers/maker-ethics/))
+[Helium Network Manufacturer Ethics and Expectations](https://docs.helium.com/hotspot-makers/maker-ethics)
