--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -111,11 +111,15 @@ receive veHNT in proportion with the amount of time that the tokens are staked f
 Tokens are locked for a fixed duration and are released in full at the end of the defined lockup
 period. Vote weight declines linearly until release.
 
-
 <figure className="screensnippet-wrapper">
-  <img src={useBaseUrl('/img/realms/cliffgraph.png')} style={{ maxHeight: 'initial', padding: '0 0 8px 0' }}  />
-  <figcaption>You lock 10.000 tokens with a lockup duration of one year. They are then unavailable for the next one year. After this
-time, you can withdraw them again.</figcaption>
+  <img
+    src={useBaseUrl('/img/realms/cliffgraph.png')}
+    style={{ maxHeight: 'initial', padding: '0 0 8px 0' }}
+  />
+  <figcaption>
+    You lock 10.000 tokens with a lockup duration of one year. They are then unavailable for the
+    next one year. After this time, you can withdraw them again.
+  </figcaption>
 </figure>
 
 #### Constant
@@ -124,11 +128,15 @@ Tokens are locked indefinitely. At any time you can start the unlock process whi
 initially chosen lockup duration. Vote weight stays constant until you start the unlock process,
 then it declines linearly until release.
 
-
 <figure className="screensnippet-wrapper">
-  <img src={useBaseUrl('/img/realms/constantgraph.png')} style={{ maxHeight: 'initial', padding: '0 0 8px 0' }}  />
-  <figcaption>You lock 10.000 tokens with a lockup duration of one year. After three years you decide to start the
-unlocking process. Another year after that, you can withdraw the tokens.</figcaption>
+  <img
+    src={useBaseUrl('/img/realms/constantgraph.png')}
+    style={{ maxHeight: 'initial', padding: '0 0 8px 0' }}
+  />
+  <figcaption>
+    You lock 10.000 tokens with a lockup duration of one year. After three years you decide to start
+    the unlocking process. Another year after that, you can withdraw the tokens.
+  </figcaption>
 </figure>
 
 ### Duration
@@ -143,6 +151,30 @@ will be added.
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/duration.png')} style={{ maxHeight: 250 }} />
   <figcaption>Setting a longer duration results in a greater vote weight multiplier.</figcaption>
+</figure>
+
+### Stake Multiplier
+
+veHNT positions can be strengthened by increasing the duration that thet are locked for. The
+resulting multiplier designates the amount of vote and delegation power of the position. It is not
+indicative of an investment return.
+
+In other words, if you staked 10 HNT for 6 months, you'd get the same 10 HNT back 6 months later.
+During this time you would be able to [delegate](#delegating-stakes) your position to a network to
+get a return in that network's tokens.
+
+Positions created during the [landrush](#landrush) period received an additional 3x multiplier on
+the overall lockup multiplier.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/realms/multiplier.gif')}
+    style={{ maxHeight: 250, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+  <figcaption>
+    The multiplier affects a position's voting and delegation power but does not mean more HNT is
+    returned.
+  </figcaption>
 </figure>
 
 ### Confirming your Stake
@@ -162,15 +194,17 @@ the veHNT position.
 ## Managing Stakes
 
 With Realms, it's a sizzling experience to take control of your HNT stakes, ensuring they're grilled
-to perfection. Chew through stake delegation, transfers, splitting, and cooldowns like a master chef
-. <span className="🥩">🥩</span>
+to perfection. Chew through stake delegation, transfers, splitting, and cooldowns like a master
+chef. <span className="🥩">🥩</span>
 
 ### Delegating Stakes
 
 A stake will allow its holder to participate in Helium Network (HNT) governance, however it will not
 earn any token return until it is delegated to a subDAO.
 
-Once a stake has been delegated, it can be undelegated in the same interface.
+Once a stake has been delegated, it can be undelegated in the same interface. Delegations can be
+changed at any time, however it will take one epoch for the position to be available for
+redelegation.
 
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/delegate.png')} style={{ maxHeight: 300 }} />
