feedback from suggestions, line wraps

--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -14,7 +14,7 @@ slug: /faq/helium-network
 
 Helium is a global, distributed network of Hotspots that create public, long-range wireless coverage
 for Internet of Things (IoT) devices. Hotspots mine and are rewarded in IOT, a cryptocurrency now on
-the Solana blockchain. 
+the Solana blockchain.
 
 Today, the Helium ecosystem, and its hundreds of thousands of Hotspots deployed by a global
 community, provide access to the largest decentralized wireless network in the world.
@@ -42,8 +42,8 @@ scooters, medical transport and tracking devices, cooling systems, smart lightin
 ### Does Helium replace the Wi-Fi in my house?
 
 No. Hotspots receive radio signals and route packets from low-power devices in your area that use
-LoRaWAN, a wireless protocol, and have been deployed to the Helium Network. Typically these
-are devices such as GPS trackers, environmental sensors, weather meters, etc., that only need to
+LoRaWAN, a wireless protocol, and have been deployed to the Helium Network. Typically these are
+devices such as GPS trackers, environmental sensors, weather meters, etc., that only need to
 transmit and share small bits of information. The Hotspot uses your existing Internet (via WiFi or
 Ethernet) to deliver the data packets sent by devices. It does not replace internet or cellular
 service for regular devices like computers and smartphones
@@ -56,18 +56,18 @@ should check the terms with individual providers and comply with applicable law.
 ### How far does the Helium Network reach and does it use radio frequency?
 
 Helium’s LoRaWAN technology, the combination of the Helium blockchain and LoRaWAN wireless protocol,
-uses sub-GHz radio frequency between 860 and 923 MHz. Depending on conditions, Helium LoRaWAN can 
-reach dozens of miles or kilometers and even connect devices that are inside buildings unlike GPS and 
-cellular signals.
+uses sub-GHz radio frequency between 860 and 923 MHz. Depending on conditions, Helium LoRaWAN can
+reach dozens of miles or kilometers and even connect devices that are inside buildings unlike GPS
+and cellular signals.
 
 ### What kind of cryptocurrency do I earn?
 
-Hotspot owners earn IOT tokens on the Solana Blockchain
+Hotspot owners earn IOT tokens.
 
 ### How do Hotspots earn IOT?
 
-Hotspots earn IO by providing wireless coverage and transferring data from nearby devices. The more
-data transferred the larger the reward. Previously hotspots used to earn HNT tokens and
+Hotspots earn IOT by providing wireless coverage and transferring data from nearby devices. The more
+data transferred the larger the reward. Previously Hotspots earned HNT tokens and
 [Here’s a helpful video about how HNT worked](https://www.youtube.com/watch?v=B0JOB88MHSI).
 
 ### How much IOT will I earn?
@@ -89,19 +89,13 @@ Hotspot owners earn IOT depending on how frequently their devices do two things:
 It's best to have at least one or two other Hotspots within radio range of you so that you can
 participate in Proof of Coverage Challenges to earn IOT rewards at a higher rate. If you are the
 only Hotspot in your area, you will earn IOT if a device uses your Hotspots connection to transfer
-sensor data back to the sensor users. IOT is distributed based on these economics. Read more about 
+sensor data back to the sensor users. IOT is distributed based on these economics. Read more about
 token economics [here](https://www.helium.com/token).
 
 ### Can I connect my phone or computer to Hotspots?
 
-Yes. As of early 2022 the community has started to roll out 5G-CBRS hotspots in the USA
+Yes. As of early 2022 the community has started to roll out 5G-CBRS Hotspots in the USA
 [4G/LTE and 5G coverage on the Helium blockchain](https://www.helium.com/5G).
-
-### Does Helium partner with Internet providers?
-
-Yes. In fact, Helium recently partnered with DISH, a nationwide provider of internet connectivity,
-to expand 5G coverage.
-[You can learn more about this news here](https://ir.dish.com/news-releases/news-release-details/dish-partners-helium-leverage-helium-networks-blockchain-model).
 
 ### Does the Helium community have a Discord?
 
