Remove or update occurrences of 'on the Helium L1' (#1259)
* Remove or update occurrences of 'on the helium l1'

* Update docs/oracles/iot-proof-of-coverage-oracles.mdx

Co-authored-by: Joey Hiller <1965053+jthiller@users.noreply.github.com>

* Update docs/oracles/iot-proof-of-coverage-oracles.mdx

Co-authored-by: Joey Hiller <1965053+jthiller@users.noreply.github.com>

* applied line wrap

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>
Co-authored-by: Joey Hiller <1965053+jthiller@users.noreply.github.com>

--- a/docs/oracles/price-oracles.mdx
+++ b/docs/oracles/price-oracles.mdx
@@ -10,9 +10,9 @@ slug: /oracles/price-oracles
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-On the Helium L1, the [Price Oracle](/blockchain/oracles) is the only existing Oracle on the Helium
-Network. It is required on-chain as the price of HNT is needed to calculate HNT to burn when minting
-Data Credits (DC).
+The [Price Oracle](/blockchain/oracles) is one of many Oracles on the Helium Network. The Price
+Oracle is required on-chain as the price of HNT is needed to calculate HNT to burn when minting Data
+Credits (DC).
 
 ## Post Migration Implementation
 
