consolidating 12/24-word docs to “seed phrase” docs
link fixes
netlify redirects
page cleanup
“current phase” phrasing
sidebar updates

--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -108,8 +108,8 @@ downloaded the latest Helium Wallet app version **2.0.0** or higher.
 
 :::info Public Addresses on Solana
 
-Your **public** Wallet address will change post-migration, but your **private** key and 12-word seed
-phrase will remain the same.
+Your **public** Wallet address will change post-migration, but your **private** key and seed phrase
+will remain the same.
 
 :::
 
