--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -196,7 +196,7 @@ iteration count and the AES-GCM authentication tag.
 
 The `--seed` flag enables you to import a wallet generated elsewhere. For example, you may want to
 import your key from the mobile wallet, so that you can submit transactions that may not be
-supported in the mobile wallet. The `--seed` command supports both 12-word and 24-word imports.
+supported in the mobile wallet. The `--seed` command supports seed phrase imports.
 
 Enter the command:
 
@@ -242,8 +242,8 @@ run:
 $ helium-wallet export
 ```
 
-You will be prompted for the Wallet Password, (this is _not_ your 12-word or 24-word seed phrase,
-this password was input when the wallet was created.)
+You will be prompted for the Wallet Password, (this is _not_ your seed phrase, this password was
+input when the wallet was created.)
 
 Next, you will be prompted to enter an `Export Password` twice. This password will be used in the
 Helium Wallet App.
