--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -22,17 +22,14 @@ expected as part of the blockchain migration.
 
 ## 12-Word And 24-Word Seed Phrases
 
-When a Helium Wallet is created with the Helium Wallet app or Helium Hotspot App, a 12-word or
-24-word "Seed Phrase" is generated.
+When a Helium Wallet is created with the Helium Wallet app or Helium Hotspot App, a 24-word "Seed
+Phrase" is generated.
 
 Users who created their Helium Wallet using the Helium Hotspot App will have a 12-word seed phrase,
 while the Helium Wallet app accepts 12-word seed phrases, all new wallets are created with 24-word
 seed phrases.
 
-Read more about Helium 12-word and 24-word here:
-
-- [12-Word Seed Phrase](/wallets/twelve-words)
-- [24-Word Seed Phrase](/wallets/twenty-four-words)
+Read more about Helium Wallet [seed phrases here](/wallets/wallet-seed-phrase).
 
 :::note
 
