--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -21,17 +21,15 @@ Nova Labs no longer manufacturers Hotspots, but there is now an extensive
 Use the [Helium Wallet app](/wallets/helium-wallet-app) to interact with tokens, take part in
 governance, and all other non Hotspot management functions.
 
-Read the [Migration Guide](/solana/migration/wallet-user#for-helium-app-users) to prepare for the
-Solana Migration.
-
 :::
 
 ## Helium Hotspot App Overview
 
-The Helium app (available for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
-[Android](https://play.google.com/store/apps/details?id=com.helium.wallet)) includes everything
-needed to on-board and maintain an Original Helium Hotspot or FreedomFi Hotspot. With the app you
-are able to do things like:
+The Helium Hotspot apps for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
+[Android](https://play.google.com/store/apps/details?id=com.helium.wallet) include everything needed
+to on-board and maintain an Original Helium Hotspot or FreedomFi Hotspot.
+
+The app can be used to:
 
 - Add Nova Labs or FreedomFi Hotspot to the Helium Network
 - Set or Modify the Hospot's location
