--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -14,24 +14,22 @@ import TabItem from '@theme/TabItem'
 
 Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots on the Network.
 Nova Labs no longer manufacturers Hotspots, but there is now an extensive
-[list of approved manufacturers](/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing/).
+[list of manufacturers who sell approved Hotspots](/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing/).
 
 :::tip Wallet Functionality
 
 Use the [Helium Wallet app](/wallets/helium-wallet-app) to interact with tokens, take part in
 governance, and all other non Hotspot management functions.
 
-Read the [Migration Guide](/solana/migration/wallet-user#for-helium-app-users) to prepare for the
-Solana Migration.
-
 :::
 
 ## Helium Hotspot App Overview
 
-The Helium app (available for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
-[Android](https://play.google.com/store/apps/details?id=com.helium.wallet)) includes everything
-needed to on-board and maintain an Original Helium Hotspot or FreedomFi Hotspot. With the app you
-are able to do things like:
+The Helium Hotspot apps for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
+[Android](https://play.google.com/store/apps/details?id=com.helium.wallet) include everything needed
+to on-board and maintain an Original Helium Hotspot or FreedomFi Hotspot.
+
+The app can be used to:
 
 - Add Nova Labs or FreedomFi Hotspot to the Helium Network
 - Set or Modify the Hospot's location
