--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -30,6 +30,8 @@ There is a [video walkthrough of the full process here](https://youtu.be/Sl7UBSt
 
 ## Installing the Helium-Solana App
 
+Update your Ledger firmware to be at least 2.1.0 before you start.
+
 As of now, we are still waiting on Ledger to release our app. Until then, to install you must follow
 these steps:
 
