--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -87,16 +87,6 @@ Validators. Anyone asking for them is guaranteed to be a scammer.
 to store them. Screenshots and photos stored or backed up in the cloud can easily be hacked and
 funds stolen.
 
-### Ledger Wallet
-
-<img
-  className="appscreenbanner"
-  src={useBaseUrl('img/wallets/helium-wallet-app/pair-ledger-banner.png')}
-/>
-
-Import your Ledger account by pairing with it over Bluetooth. Payment and other transaction support
-will be coming soon, after the Solana Migration date.
-
 ## Working With Multiple Wallets
 
 You are able to create/import multiple wallets, each with their unique set of 12 or 24 words. You
@@ -247,36 +237,9 @@ settings do, it is best to leave them `off` by default.
 
 ---
 
-:::warning Testing Tokens
+### Examine Hotspots
 
-All tokens in the preview version of the Helium Wallet app are testing tokens on Solana devnet.
-These tokens have no value and should not be traded.
-
-:::
-
-The Helium Wallet App has been updated with a Solana Devnet Preview. With this, you can test the
-Solana migration for your wallet and hotspots before it happens. A snapshot was taken January 31st,
-2023 of Helium mainnet. All tokens and hotspots on Solana devnet are reflective of this snapshot.
-
-## Enable Solana Preview
-
-On the main screen of the Helium Wallet app, click the Settings icon in the upper-left corner.
-
-<div className="img-center">
-  <img className="appscreenbanner" src={useBaseUrl('img/solana/migration-settings.png')} />
-</div>
-
-Then, enable the Solana preview mode. You can always disable the Solana preview mode in the same way
-to see your real assets.
-
-<div className="img-center">
-  <img className="appscreenbanner" src={useBaseUrl('img/solana/migration-preview.png')} />
-</div>
-
-### Explore Hotspots
-
-You can now explore your hotspots by clicking the Collectibles Tab. From here, you will be able to
-test claiming rewards with testing tokens.
+You can now examine your hotspots by clicking the Collectables Tab. 
 
 Let us know via Discord if you experience any issues!
 
@@ -284,8 +247,13 @@ Let us know via Discord if you experience any issues!
   <img className="appscreenbanner" src={useBaseUrl('img/solana/migration-collectibles.png')} />
 </div>
 
-### Ledger Users
+### Ledger Wallet
 
-See [Ledger wallet migration guide](/solana/migration/wallet-user) for guidance on how to migrate
-Ledger wallets to Solana. See [Legger Wallet Hardware](https://docs.helium.com/wallets/ledger/) for
-how a Leger wallet was configured for HNT.
+Hardware ledgers are not yet compatible with the Helium Wallet App on the Solana blockchain.
+Current advice is to migrate using the tool mentioned below and switch to using [Solflare](https://solflare.com/).
+
+See [Ledger wallet migration guide](/solana/migration/ledger) for guidance on how to migrate
+Ledger wallets to Solana. 
+
+See [Ledger Wallet Hardware](https://docs.helium.com/wallets/ledger/) for
+how a Leger wallet was configured for HNT on the Helium Blockchain.
