--- a/docs/faq/migration.mdx
+++ b/docs/faq/migration.mdx
@@ -1,1 +1,6 @@
 # FAQ - Migration
+
+## Why does my Helium Wallet app crash when I open it?
+The Helium Wallet app needs to be updated to version 2.0.5 or later, this fixes the app crashing and other bugs which allows you to continue onto the migration process.
+If your device's App/Play Store is not showing an update button, make sure to check manually by clicking onto the app inside the store to see more info, and the button should show “Update” instead of “Open”.
+If neither of these work, make sure you have your 12 words saved, and reinstall the app.
