--- a/docs/faq/migration.mdx
+++ b/docs/faq/migration.mdx
@@ -4,3 +4,8 @@
 The Helium Wallet app needs to be updated to version 2.0.5 or later, this fixes the app crashing and other bugs which allows you to continue onto the migration process.
 If your device's App/Play Store is not showing an update button, make sure to check manually by clicking onto the app inside the store to see more info, and the button should show “Update” instead of “Open”.
 If neither of these work, make sure you have your 12 words saved, and reinstall the app.
+
+## Why does my account have a small amount of SOL that wasn’t there before?
+The Helium Foundation was kind enough to provide every wallet that completes the migration process with 0.00139 SOL for Solana transaction fees, this is enough to cover 100 token transfer transactions.
+If you see 1 SOL, you may be on the devnet instead of the mainnet view of the wallet, be sure to switch to mainnet in the settings if it’s not already.
+If mainnet is already selected, this is one of the few display errors which can be fixed by switching to devnet and back to mainnet, or updating the app.
