--- a/docs/faq/migration.mdx
+++ b/docs/faq/migration.mdx
@@ -10,5 +10,5 @@ The Helium Foundation was kind enough to provide every wallet that completes the
 If you see 1 SOL, you may be on the devnet instead of the mainnet view of the wallet, be sure to switch to mainnet in the settings if it’s not already.
 If mainnet is already selected, this is one of the few display errors which can be fixed by switching to devnet and back to mainnet, or updating the app.
 
-## Why ca't I see my hotspot’s activity and rewards?
+## Why can't I see my hotspot’s activity and rewards?
 Due to the migration, third party applications need to update their services, in the meantime, you can use applications like Helium Geek and Hotspotty, though some work may still need to be done for those apps in the coming days to see all current activity.
