--- a/docs/faq/migration.mdx
+++ b/docs/faq/migration.mdx
@@ -12,3 +12,6 @@ If mainnet is already selected, this is one of the few display errors which can 
 
 ## Why can't I see my hotspot’s activity and rewards?
 Due to the migration, third party applications need to update their services, in the meantime, you can use applications like Helium Geek and Hotspotty, though some work may still need to be done for those apps in the coming days to see all current activity.
+
+## What is this new IOT token?
+IOT is the newest token on the Helium Network, instead of earning HNT, hotspots will earn IOT rewards for their PoC and data transfer which can be swapped for HNT in the app or using an exchange. You can find more info [here](https://docs.helium.com/helium-tokens/iot).
