hnt-sol swap video demo

--- a/docs/helium-tokens/sol.mdx
+++ b/docs/helium-tokens/sol.mdx
@@ -31,6 +31,10 @@ HNT to gain veHNT, and potentially more complex DeFi actions where multiple acco
 created (even if only temporarily). If you do not have enough SOL, you can use this tool to swap HNT
 for 0.02 SOL.
 
+---
+
+## Swap Utility
+
 Open this page from within the browser of the Helium Wallet App (Click on Globe icon) to add the SOL
 to your wallet app.
 
@@ -45,3 +49,23 @@ For example, locking up HNT to gain veHNT creates new accounts and requires arou
 Helium Foundation has provided every single Helium wallet with 0.00139 SOL (enough for 100 standard
 transfers). You may need to acquire more SOL to enable HNT lockup. We recommend having more than the
 minimum amount of SOL in case you need to fund additional accounts in the future.
+
+---
+
+## Video Walk Through
+
+<figure className="screensnippet-wrapper">
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/maxW3cjCrcQ"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+  ></iframe>
+  <figcaption>
+    Video of the process in action.{' '}
+    <a href="https://www.youtube.com/watch?v=maxW3cjCrcQ">Click here to watch on YouTube</a>.
+  </figcaption>
+</figure>
