--- a/docs/vote-escrow/vehnt.mdx
+++ b/docs/vote-escrow/vehnt.mdx
@@ -14,8 +14,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 In the Helium ecosystem, HNT holders can receive veHNT by locking their HNT on-chain for a specified
 period in exchange for voting power and subDAO delegation income in the Helium DAO as defined in
-HIP-51. After the lock-up period ends, and the locked position is closed the amount of HNT is released
-to the owner's wallet and is once again transferable.
+HIP-51. After the lock-up period ends, and the locked position is closed the amount of HNT is
+released to the owner's wallet and is once again transferable.
 
 veHNT, or voting-escrowed HNT, is a token introduced as part of the Helium Network's transition to
 the Solana blockchain and the new governance model. veHNT was designed to empower Helium token
@@ -28,10 +28,10 @@ informed decisions and actively participate in shaping the network's future.
 When HNT is locked into the voting escrow, it is converted to veHNT, which can be used to
 participate in network governance and decision-making. veHNT is the only way to vote in the Helium
 Network. The primary purpose of veHNT is to incentivize long-term commitment to the network and
-align stakeholders' interests with the network's long-term success. 
+align stakeholders' interests with the network's long-term success.
 
-veHNT is not a separate token but rather a derivative of HNT. The amount of veHNT received when 
-locking HNT depends on the lock-up period chosen by the user, with longer lock-up periods resulting 
+veHNT is not a separate token but rather a derivative of HNT. The amount of veHNT received when
+locking HNT depends on the lock-up period chosen by the user, with longer lock-up periods resulting
 in a higher veHNT multiplier.
 
 ## SubDAOs
@@ -40,10 +40,10 @@ The Helium Network serves as the overarching system that enables a multitude of 
 to exist via the novel incentive mechanism of HNT.
 
 Each subDAO governs a specific area of the network and receives a portion of the network's token
-emissions, distributed proportionaly among veHNT holders who have delegated their veHNT to that 
-subDAO. The distribution of tokens is determined by the amount of veHNT delegated to each subDAO 
-and the individual lock-up periods. Initially, two subDAOs are introduced: IOT and MOBILE.
-Voting on the IOT and MOBILE networks will require veIOT and veMOBILE respectively.
+emissions, distributed proportionaly among veHNT holders who have delegated their veHNT to that
+subDAO. The distribution of tokens is determined by the amount of veHNT delegated to each subDAO and
+the individual lock-up periods. Initially, two subDAOs are introduced: IOT and MOBILE. Voting on the
+IOT and MOBILE networks will require veIOT and veMOBILE respectively.
 
 ### IOT subDAO
 
@@ -59,9 +59,9 @@ initiatives aimed at integrating Helium technology into mobile devices and netwo
 
 ## Delegating veHNT
 
-To earn rewards from the token emissions, veHNT holders must delegate their veHNT to one or more 
-subDAOs. The lock-up period can range from 1 day to 48 months, with the longer lock-up periods 
-resulting  in a higher veHNT multiplier. Users can also change their delegations at any time to 
+To earn rewards from the token emissions, veHNT holders must delegate their veHNT to one or more
+subDAOs. The lock-up period can range from 1 day to 48 months, with the longer lock-up periods
+resulting in a higher veHNT multiplier. Users can also change their delegations at any time to
 optimize their earnings from the subDAOs.
 
 veTokens can be managed through [Realms](/vote-escrow/realms) using the in-app browser on the
@@ -73,14 +73,14 @@ veTokens can be managed through [Realms](/vote-escrow/realms) using the in-app b
 
 ### Impacts to subDAO Rewards
 
-SubDAO rewards are calculated and paid to the lock-up position each 24hr reward period. At 
-approximately 00:30 UTC time. Currently, the IOT and MOBILE subDAO each have a 6% token emission 
-pool for veHNT stakers. This 6% is shared proportionaly amongst all veHNT delegated to that 
-subDAO at the end of each epoch.
+SubDAO rewards are calculated and paid to the lock-up position each 24hr reward period. At
+approximately 00:30 UTC time. Currently, the IOT and MOBILE subDAO each have a 6% token emission
+pool for veHNT stakers. This 6% is shared proportionaly amongst all veHNT delegated to that subDAO
+at the end of each epoch.
 
 **subDAO rewards may increase when:**
 
-- More veHNT is delegated in the subDAO you delegated to - your treasury gets more HNT. 
+- More veHNT is delegated in the subDAO you delegated to - your treasury gets more HNT.
 - More Hotspot onboarding fees are burned in the subDAO you delegated to.
 - More network data is transferred in the subDAO you delegated to.
 
