--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -12,17 +12,8 @@ slug: /hotspot-makers/maker-apps
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-This document describes what Maker apps are and how users interact with them on the Helium Network.
-
-Followed by a listing of the available Maker Apps.
-
-Beginning March 2022, all [HIP-19](https://github.com/dewi-alliance/hotspot-manufacturers#readme)
-Hotspot Manufacturers (aka Makers) are required to support their customers with a bespoke Mobile App
-to onboard their Hotspots, assert Hotspot locations and maintain their Hotspots with diagnostic tools, 
-and various basic troubleshooting tools.
-
-Maker Apps can also include extra enhancements such as Proof-of-Coverage analysis, earnings tools,
-and more.
+This document describes what Maker apps are and how users interact with them on the Helium Network
+as well as a list of the available Maker Apps.
 
 For more information,
 [read our blog post announcing this change](https://blog.helium.com/the-future-of-hotspot-apps-and-wallets-in-the-helium-ecosystem-a5b904b01d62).
@@ -46,8 +37,8 @@ Typescript.
 
 The [Maker Starter App](https://github.com/helium/maker-starter-app) includes support for
 deeplinking to the Helium Wallet App to sign transactions, removing any requirements for users to
-enter their 12 or 24 word seed phrase into the Maker App. **This is a security precaution and 
-prevents potential lost of funds and Hotspots, as the seed phrase acts as a user's private key on 
+enter their 12 or 24 word seed phrase into the Maker App. **This is a security precaution and
+prevents potential lost of funds and Hotspots, as the seed phrase acts as a user's private key on
 the blockchain.** If you find a Maker app that asks for your seed phrase, do not trust it.
 
 #### Features
@@ -56,9 +47,13 @@ The following features are supported in the Maker Starter App:
 
 - Add a Hotspot
 - Set a Location (including gain and elevation)
-- Transfer a Hotspot (optional), Function is now available by transfering an NFT in the [Helium Wallet](/wallets/helium-wallet-app)
+- Transfer a Hotspot (optional), Function is now available by transfering an NFT in the
+  [Helium Wallet](/wallets/helium-wallet-app)
 - Settings with PIN Code and language selection
 - Deeplinking to [Helium Wallet](/wallets/helium-wallet-app) to sign transactions
+
+Maker Apps can also include extra enhancements such as Proof-of-Coverage analysis, earnings tools,
+and more.
 
 ---
 
@@ -188,7 +183,8 @@ As of March 2023 apps are
 
 ### FreedomFi
 
-FreedomFI hotspots can now use the Helium Hotspot App to onboard and manage
+FreedomFi Hotspots can now use the Helium Hotspot App to onboard and manage
+
 - iOS App: https://apps.ios.com/us/app/freedomfi/id1608377889
 - Android App: https://play.google.com/store/apps/details?id=com.freedomfi.FreedomFiApp
 
@@ -406,10 +402,8 @@ https://www.nebra.com/blogs/news/nebra-providing-updates-for-pycom-hotspots
 
 ### SyncroB.it
 
-Nebra have taken over support for SyncroB.it hotspots
-Please read the annoucement. 
+Nebra have taken over support for SyncroB.it hotspots Please read the annoucement.
 https://www.nebra.com/blogs/news/syncrobit-hotspots-join-nebra-family
-
 
 ---
 
